css/main.css
/* ... */
.popup.active {
  opacity: 1;
  visibility: visible;
}
.popup__wraper {
  width: 100%;
  max-width: 970px;
  position: relative;
  margin: auto;
  padding: 30px 15px;
}
.popup__body {
  position: relative;
  width: 100%;
  background: #fff;
  padding: 20px;
  box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.5);
  border-radius: 20px;
  transform: scale(0);
  transition: 0.3s;
  display: flex;
  flex-direction: column;
}
.popup.active .popup__body {
  transform: scale(1);
}
.popup-mini .popup__wraper {
  max-width: 350px;
}
.popup-head {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 15px 0;
  margin: 0 0 15px 0;
  border-bottom: 2px solid #e7e7e7;
}
.popup-head__title {
  display: flex;
  align-items: center;
  font-family: "Poppins", sans-serif;
  font-weight: 500;
  font-size: 16px;
  color: #797979;
  line-height: 130%;
}
.popup-head__title:before {
  color: #797979;
  font-size: 20px;
  margin-right: 10px;
}
.popup-head__close {
  cursor: pointer;
  padding: 5px;
}
.popup-head__close:before {
  font-size: 10px;
  color: #000;
}

.pdf-popup__title {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 20px;
  color: #1d1d1b;
  line-height: 130%;
  margin: 0 0 20px 0;
}
.share-popup .share-links {
  margin: 5px 0;
}

.share-links {
  display: flex;
  align-items: center;
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 16px;
  color: #1d1d1b;
  line-height: 130%;
  padding: 7px;
  transition: 0.3s;
  border-radius: 10px;
}
.share-links:hover {
  background: #e1f7ff;
}
.share-links img {
  width: 25px;
  height: 25px;
  margin-right: 15px;
}

.map-popup {
  border-radius: 10px;
  overflow: hidden;
}
.map-popup iframe {
  width: 100%;
}

/* ================================================================================================================ */
/* СТИЛИ ТАБОВ =============================================================================================== */
/* ================================================================================================================ */
/* Базовая стилизация табов */
.tab {
  padding: 30px 0;
}
.tab__container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 15px;
}
.tab__buttons {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
.tab__button {
  padding: 10px 15px;
  background: #333;
  transition: 0.3s;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 18px;
  color: #fff;
  line-height: 125%;
}
.tab__button:hover {
  background: #555;
  cursor: pointer;
}
.tab__button.active {
  background: red;
}
.tab__content {
  margin-top: 30px;
  position: relative;
}
.tab__item {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  opacity: 0;
  visibility: hidden;
  transition: 0.3s;
}
.tab__item h1 {
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-size: 28px;
  color: #111;
  line-height: 125%;
  margin-bottom: 15px;
}
.tab__item p {
  font-family: "Poppins", sans-serif;
  font-weight: 400;
  font-size: 14px;
  color: #444;
  line-height: 125%;
}
.tab__item.active {
  position: relative;
  opacity: 1;
  visibility: visible;
}

/* ================================================================================================================ */
/* СТИЛИ card СТРАНИЦЫ  ====================================================================================== */
/* ================================================================================================================ */
/* Общие стили для страницы card  */
.card-tile {
  padding: 16px;
  background: #ffffff;
  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
}

/* end -------------------- */
/* Сетка карточки товара  */
.card-grid p {
  margin: 0;
}
.card-grid__body {
  margin: 0 0 32px 0;
}
.card-grid__main {
  display: flex;
  justify-content: space-between;
  align-items: start;
}
.card-grid__left {
  min-width: 0px;
  flex: 0 0 70%;
  margin-right: 16px;
  display: flex;
  flex-wrap: wrap;
}
.card-grid__left .card-tab {
  min-width: 0px;
  margin-top: 16px;
  flex: 0 0 100%;
}
.card-grid__gallery {
  min-width: 0px;
  flex: 0 0 50%;
  margin-right: 16px;
}
.card-grid__description {
  min-width: 0px;
  flex: 1 1 auto;
}
.card-grid__right {
  flex: 1 1 auto;
}
.card-grid__right .card-tile:not(:last-child) {
  margin-bottom: 16px;
}
.card-grid .share {
  margin-top: 20px;
}
.card-grid__video {
  position: relative;
  width: 100%;
  padding-bottom: 60%;
  margin: 20px 0;
}
@media screen and (max-width: 1200px) {
  .card-grid__left {
    flex: 0 0 62%;
  }
}

/* end -------------------- */
/* Стили шапки карточки товара  */
.card-head {
  padding: 16px;
  padding-top: 10px;
  padding-bottom: 8px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 16px;
  margin-right: 6.5%;
}
.card-head__title {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 34px;
  color: #000;
  line-height: 100%;
  margin: 0 0 12px 0 !important;
}
.card-head__right {
  display: flex;
  align-items: center;
  margin-right: 10px;
}
.card-head__edit {
  font-family: "Poppins", sans-serif;
  font-weight: 700;
  font-size: 23px;
  color: #000;
  text-decoration: none;
  line-height: 130%;
  transition: 0.3s;
  border: 1.5px solid #b0b0b0;
  border-radius: 20px;
  padding: 3px 14px;
  margin-right: 90px;
}
.card-head__edit:hover {
  color: #ff9138;
}
.card-head__favorites::before {
  color: #ff9138;
  font-size: 40px;
}

/* end -------------------- */
/* Стили навигации  */
.card-nav {
  margin-bottom: 16px;
  margin-right: 6.5%;
  display: flex;
}
.card-nav__item {
  padding: 0 16px;
  position: relative;
}
.card-nav__item::after {
  content: "";
  height: 25px;
  width: 1px;
  background: #e7e7e7;
  position: absolute;
  top: 50%;
  right: 0;
  transform: translate(0, -50%);
}
.card-nav__item:last-child::after {
  display: none;
}
/* ... */

